# Sonari

./: Cargo.toml  Makefile  README.md
docs/: Period1.md
sonari/: Cargo.toml  Makefile
sonari/.cargo/: config.toml
sonari/src/: console.rs  entry.asm  lang_items.rs
src/: main.rs
user/: Cargo.toml
user/src/: lib.rs  linker.ld
