[package]
name = "sonari"
version = "0.1.0"
edition = "2021"
authors = ["Damao <3034906016@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
[profile.release]
debug = true
